--- a/Homepage Style.css
+++ b/Homepage Style.css
@@ -26,7 +26,7 @@ text-transform:uppercase;
 .lba:hover,.lba:active{background-color:#F08080;}
 .clearfix { clear: both; }
 .h-right-col{
-	line-height:40px;width:75%;
+	line-height:40px;min-width:1100px;
 	min-height:900px;
     padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-30.5%;background:rgba(230,230,250,0.8)}
 .hrbp{margin-left:5%;margin-top:5%;font-size:20px;text-align:left;}
@@ -39,7 +39,7 @@ text-transform:uppercase;
 .Tdh{border: 1px solid black;padding:5px}
 
 .right-col{
-	line-height:40px;width:1100px;
+	line-height:40px;min-width:1100px;
 	min-height:900px;
     padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-55.2%;background:rgba(230,230,250,0.8)}
 .rbp{font-size:20px;}
