--- a/Homepage Style.css
+++ b/Homepage Style.css
@@ -1,6 +1,6 @@
 /*This file is Homepage Style.css */
 body { background-image: url(5.1.jpg); font-size: 14px; } 
-#headers { margin-right:15%;width: 64%;height：10px；float:right; position: relative;}
+#headers { width: 64%;height：10pxposition: absolute;top:5%;left:20%}
 .Tiul{list-style-type:none;margin:0;padding:0;overflow:hidden;}
 .Tili{float:left;background-color:#bebebe;}
 .Tilic{float:left;background-color:#F08080;}
