--- a/Homepage Style.css
+++ b/Homepage Style.css
@@ -1,6 +1,6 @@
 /*This file is Homepage Style.css */
 body { background-image: url(5.1.jpg); font-size: 14px; } 
-#headers { width: 64%;height：10pxposition: absolute;top:5%;left:20%}
+#headers { width: 100%;height：10px;position: absolute;top:2%;left:20%}
 .Tiul{list-style-type:none;margin:0;padding:0;overflow:hidden;}
 .Tili{float:left;background-color:#bebebe;}
 .Tilic{float:left;background-color:#F08080;}
@@ -26,9 +26,9 @@ text-transform:uppercase;
 .lba:hover,.lba:active{background-color:#F08080;}
 .clearfix { clear: both; }
 .h-right-col{
-	line-height:40px;min-width:1100px;
+	line-height:40px;width:60%;
 	min-height:900px;
-    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-30.5%;background:rgba(230,230,250,0.8)}
+    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-24.5%;}
 .hrbp{margin-left:5%;margin-top:5%;font-size:20px;text-align:left;}
 .hp{float:right;width:35%;height:35%;margin-top:-50%;margin-right:3%}
 .Tb{margin-top:10%;
@@ -39,9 +39,9 @@ text-transform:uppercase;
 .Tdh{border: 1px solid black;padding:5px}
 
 .right-col{
-	line-height:40px;min-width:1100px;
+	line-height:40px;width:60%;
 	min-height:900px;
-    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-55.2%;background:rgba(230,230,250,0.8)}
+    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-42%;}
 .rbp{font-size:20px;}
 .bdl{list-style-type:none;}
 .bdt{font-size:20px;color: #666;line-height:50px;}
@@ -49,18 +49,9 @@ text-transform:uppercase;
 .rbli{font-size:20px;color: #666;line-height:50px;}
 .rp{width:50%;height:50%;}
 .brp{width:30%;height:30%;}
-.ctright-col{line-height:40px;width:75%;
+.ctright-col{line-height:40px;width:60%;
 	min-height:900px;
-    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-30.5%;background:rgba(230,230,250,0.8)}
-
-.clearfix { clear: both; }
-
-.bottom-info { padding: 50px 0; color: #9a9a9a; font-size: 12px; line-height: 25px; }
-.bottom-info a { color: #9a9a9a; }
-.small_png {margin-left: 12%; width:82%;}
-.small_jpg{ float: left;}
-.home_p{margin-left:7%; width: 52%;}
-
+    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-24.5%;}
 
 #footer { background-color:black;
 padding-top:10px;
