--- a/Homepage Style.css
+++ b/Homepage Style.css
@@ -1,6 +1,6 @@
 /*This file is Homepage Style.css */
-body { background-image: url(5.1.jpg); font-size: 14px; } 
-#headers { width: 80%;height：10px;position: absolute;top:2%;left:10%}
+body { background-image: url(file:///C:/Users/asusr/Desktop/CSE110%20Human-Centric%20Computing/ass1/5.1.jpg); font-size: 14px; } 
+#headers { margin-right:15%;width: 64%;float:right; position: relative; background: #D3D3D3;}
 .Tiul{list-style-type:none;margin:0;padding:0;overflow:hidden;}
 .Tili{float:left;background-color:#bebebe;}
 .Tilic{float:left;background-color:#F08080;}
@@ -16,7 +16,7 @@ text-transform:uppercase;
 }
 .Ta:hover,.Ta:active{background-color:#F08080;}
 #bodypage{width:100%;}
-.left-nav{line-height:35px;background-color:#eeeeee;height:900px;width:14%;float:left;padding:5px; margin-top:8%;background:rgba(230,230,250,0.8);}
+.left-nav{line-height:35px;background-color:#eeeeee;height:900px;width:250px;float:left;padding:5px;margin-top:8%;background:rgba(230,230,250,0.8);}
 .lbh{font-size:24px; text-align:center}
 .lbp{font-size:20px;margin-left:10%;margin-top:5%}
 .lbul{list-style-type:none;margin:0;padding:0;overflow:hidden;}
@@ -26,9 +26,9 @@ text-transform:uppercase;
 .lba:hover,.lba:active{background-color:#F08080;}
 .clearfix { clear: both; }
 .h-right-col{
-	line-height:40px;width:60%;
+	line-height:40px;width:75%;
 	min-height:900px;
-    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-15%;}
+    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-28%;background:rgba(230,230,250,0.8)}
 .hrbp{margin-left:5%;margin-top:5%;font-size:20px;text-align:left;}
 .hp{float:right;width:35%;height:35%;margin-top:-50%;margin-right:3%}
 .Tb{margin-top:10%;
@@ -39,9 +39,9 @@ text-transform:uppercase;
 .Tdh{border: 1px solid black;padding:5px}
 
 .right-col{
-	line-height:40px;width:50%;
+	line-height:40px;width:1100px;
 	min-height:900px;
-    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-38%;}
+    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-41%;background:rgba(230,230,250,0.8)}
 .rbp{font-size:20px;}
 .bdl{list-style-type:none;}
 .bdt{font-size:20px;color: #666;line-height:50px;}
@@ -49,18 +49,27 @@ text-transform:uppercase;
 .rbli{font-size:20px;color: #666;line-height:50px;}
 .rp{width:50%;height:50%;}
 .brp{width:30%;height:30%;}
-.ctright-col{line-height:40px;width:60%;
+.ctright-col{line-height:40px;width:75%;
 	min-height:900px;
-    padding-bottom:10%;background:rgba(230,230,250,0.8);padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-24.5%;}
+    padding-bottom:200px;padding-left:20px;float:left;position:absolute; margin-left:15%; margin-top:-28%;background:rgba(230,230,250,0.8)}
+
+.clearfix { clear: both; }
+
+.bottom-info { padding: 50px 0; color: #9a9a9a; font-size: 12px; line-height: 25px; }
+.bottom-info a { color: #9a9a9a; }
+.small_png {margin-left: 12%; width:82%;}
+.small_jpg{ float: left;}
+.home_p{margin-left:7%; width: 52%;}
+
 
 #footer { background-color:black;
 padding-top:10px;
 color:black;
-height:180px;width:200%;
+height:200px;width:143%;margin-left:-32%;
 position: absolute; 
 bottom: 0; 
-left:-50%;
+left:0;
 right:0;
-text-align:center;margin:0}
+text-align:center;}
 .bottom-info {color: #9a9a9a; font-size: 12px; line-height: 25px; }
 .bottom-info a { color: #9a9a9a; }
